# local-llm-tooling-showcase

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SAFETY.md  SAFETY_MODEL.md  SECURITY.md  add_library_tools.py  install-windows.ps1  install.sh  model_live_note.txt  pyproject.toml  start-servers.sh
.github/workflows/: ci.yml
desktop/hypr-sidebar/: README.md  hyprland.conf.example  launch.sh
desktop/hypr-sidebar/ags/: package.json  style.css
docs/: BENCHMARKING.md  CONFIG.md  CONFIGURATION.md  INSTALL.md  OLLAMA_WRAPPER.md  RELEASE_CHECKLIST.md  TOOLS.md  TROUBLESHOOTING.md  desktop-integration.md
examples/assets/: README.md
examples/integrations/hyprland/: README.md  hyprland.conf.example  launch.sh
scripts/: release-check.sh
showcase_ui_bundle/: README_UI.md  install-ui.sh
showcase_ui_bundle/src/tooling_showcase/: server.py
src/tooling_showcase/: __main__.py  adapters.py  benchmarking.py  catalog.py  cli.py  config.py  doctor.py  hypr_sidebar.py  journal.py  library_tools.py  model_routing.py  models.py  ollama.py  ollama_wrapper.py  retrieval.py  router.py  server.py  server_metadata.py  service.py  service_fallbacks.py  service_planner.py  service_prompts.py  service_request.py  service_streaming.py  state_io.py  tool_protocol.py  tools.py  tui.py
src/tooling_showcase/desktop/: __init__.py  install.py  linux.py  macos.py  manager.py  platform_detect.py  repair.py  status.py  uninstall.py  windows.py
src/tooling_showcase/research/: __init__.py  extractor.py  lab.py  modeler.py  planner.py  report_writer.py  runner.py  schemas.py  source_manager.py  storage.py  verifier.py
src/tooling_showcase/static/: app-data.js  app.css  app.js  index.html  markdown.js  style.css  tool_docs.json
tests/: test_benchmarking.py  test_browser_smoke.py  test_catalog.py  test_cli.py  test_desktop_integration.py  test_doctor.py  test_hypr_sidebar.py  test_model_routing.py  test_ollama.py  test_ollama_wrapper.py  test_ollama_wrapper_api.py  test_release_docs.py  test_research_lab.py  test_retrieval.py  test_router.py  test_server.py  test_service.py  test_static_ui.py  test_tool_stability.py  test_tools.py  test_tui.py
(+17 files in other folders)
