[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-tooling-showcase"
version = "0.1.0a4"
description = "Standalone showcase of the best local LLM tooling patterns from the workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tooling-showcase = "tooling_showcase.cli:main"
tooling-showcase-benchmark = "tooling_showcase.benchmarking:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tooling_showcase = ["static/*"]
