[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-tooling-showcase"
version = "1.0.0"
description = "Standalone showcase of the best local LLM tooling patterns from the workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "windows-curses>=2.4; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "build>=1",
    "playwright>=1.49",
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
tooling-showcase = "tooling_showcase.cli:main"
tooling-showcase-benchmark = "tooling_showcase.benchmarking:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tooling_showcase = ["static/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tooling_showcase/tui.py" = ["F841"]
